
! KGySoft.Drawing.Imaging namespace
===================================
! IReadableBitmapData interface: (breaking only if you implement it, which is normally not needed)
  ! New GetColorIndex/ReadRaw<T> methods
! IWritableBitmapData interface: (breaking only if you implement it, which is normally not needed)
  ! New SetColorIndex/WriteRaw<T> methods
+ BitmapDataExtensions class:
  + New DrawLine/BeginDrawLine/EndDrawLine/DrawLineAsync methods
  + New DrawLines/BeginDrawLines/EndDrawLines/DrawLinesAsync methods
  + New DrawBeziers/BeginDrawBeziers/EndDrawBeziers/DrawBeziersAsync methods
  + New DrawPolygon/BeginDrawPolygon/EndDrawPolygon/DrawPolygonAsync methods
  + New FillPolygon/BeginFillPolygon/EndFillPolygon/FillPolygonAsync methods
  + New DrawRectangle/BeginDrawRectangle/EndDrawRectangle/DrawRectangleAsync methods
  + New FillRectangle/BeginFillRectangle/EndFillRectangle/FillRectangleAsync methods
  + New DrawEllipse/BeginDrawEllipse/EndDrawEllipse/DrawEllipseAsync methods
  + New FillEllipse/BeginFillEllipse/EndFillEllipse/FillEllipseAsync methods
  + New DrawArc/BeginDrawArc/EndDrawArc/DrawArcAsync methods
  + New DrawPath/BeginDrawPath/EndDrawPath/DrawPathAsync methods
  + New DrawPie/BeginDrawPie/EndDrawPie/DrawPieAsync methods
  + New FillPie/BeginFillPie/EndFillPie/FillPieAsync methods
  + New DrawRoundedRectangle/BeginDrawRoundedRectangle/EndDrawRoundedRectangle/DrawRoundedRectangleAsync methods
  + New FillRoundedRectangle/BeginFillRoundedRectangle/EndFillRoundedRectangle/FillRoundedRectangleAsync methods
  + New FillPath/BeginFillPath/EndFillPath/FillPathAsync methods
* BitmapDataFactory class:
  * Self-allocating CreateBitmapData overloads: By default, no longer using array pooling if the natural element
    type of the underlying array is other than byte. This can be adjusted by the new PoolingStrategy property.
  + New PoolingStrategy property
+ New ArrayPoolingStrategy enumeration

+ New KGySoft.Drawing.Shapes namespace